--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "vue-simple-smooth-scroll",
-  "description": "平滑滾動",
-  "version": "1.0.0",
+  "description": "簡易平滑滾動",
+  "keywords": "smooth scroll",
+  "version": "1.0.2",
   "author": "cingfong <cingfong311@gmail.com>",
   "license": "MIT",
   "private": false,
-  "main": "dist/build.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cingfong/vue-simple-smooth-scroll"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "package": "vue-cli-service build --target lib ./src/lib/toast.js --name pig-ui --dest pig-ui",
+    "prepublishOnly": "npm run build"
   },
+  "main": "dist/build.js",
   "dependencies": {
     "vue": "^2.5.11"
   },
