--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/cingfong/vue-simple-smooth-scroll"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "server": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "prepublishOnly": "npm run build"
   },
