--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "smooth",
     "scroll"
   ],
-  "version": "0.1.1",
+  "version": "0.1.3",
   "author": "cingfong <cingfong311@gmail.com>",
   "license": "MIT",
   "private": false,
@@ -14,7 +14,7 @@
     "url": "https://github.com/cingfong/vue-simple-smooth-scroll"
   },
   "scripts": {
-    "server": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "prepublishOnly": "npm run build"
   },
